--- a/portal/px-nissa/styledr.css
+++ b/portal/px-nissa/styledr.css
@@ -105,7 +105,7 @@ body {
 
 .hero {
   height: calc(100vh - 80px);
-  background-image: url();
+  background-image: url(./bg.jpg);
   background-position: center;
 }
 
