--- a/portal/obrareq_files/login_Css.css
+++ b/portal/obrareq_files/login_Css.css
@@ -103,6 +103,21 @@
   border-color: #f59718;
     background-color: #f59718;
 }
+
+.home-link {
+            display: block;
+            text-align: right; /* Align text to the right */
+            margin-bottom: 0px; /* Space between link and Continue button */
+            color: #008CBA; /* Blue color */
+            text-decoration: underline;
+            font-size: 16px;
+            font-weight: 400;
+        }
+		
+        .home-link:hover {
+            text-decoration: underline; /* Underline on hover */
+        }
+
 .form p.social_LoginHeader{
    font-weight: 300;
     font-size: 14px;
